# building-web-api-with-rust

./: .env  Cargo.toml  docker-compose.yml
migrations/2024-08-18-042945_create_rustaceans/: up.sql
src/: main.rs  model.rs  repositories.rs
src/routes/: crates.rs  rustaceans.rs
