[package]
name = "advance-web-for-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1", features = ["chrono"] }
rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
rocket = { version = "0.5.1", features = ["json"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }